alambert    2005/10/31 09:04:23 UTC	(20051031-3353)
  Log:
  XMLRPC: slightly better input sanity-checking. This really needs to be improved...

  Changes:	Modified:
  +8 -5		trunk/modules/xmlrpc/account.c (File Modified) 
  +3 -1		trunk/modules/xmlrpc/channel.c (File Modified) 


alambert    2005/10/31 06:10:32 UTC	(20051031-3351)
  Log:
  XMLRPC: add channel management

  Changes:	Modified:
  +2 -1		trunk/modules/xmlrpc/Makefile.in (File Modified) 
  +2 -1		trunk/modules/xmlrpc/Makefile.win32 (File Modified) 
  +206 -0	trunk/modules/xmlrpc/channel.c (File Added) 


nenolod     2005/10/31 04:04:44 UTC	(20051031-3349)
  Log:
  Include updates.
  

  Changes:	Modified:
  +1 -1		trunk/include/extern.h (File Modified) 
  +2 -2		trunk/include/module.h (File Modified) 
  +26 -19	trunk/include/xmlrpc.h (File Modified) 


nenolod     2005/10/31 04:04:34 UTC	(20051031-3347)
  Log:
  src/match.c: Remove the const restriction as it was ignored anyway.
  

  Changes:	Modified:
  +3 -3		trunk/src/match.c (File Modified) 


nenolod     2005/10/31 03:56:31 UTC	(20051031-3345)
  Log:
  Update .depend
  

  Changes:	Modified:
  +225 -153	trunk/src/.depend (File Modified) 


nenolod     2005/10/31 03:55:46 UTC	(20051031-3343)
  Log:
  protocol/ultimate3: fix a mistake i made with the previous fix
  

  Changes:	Modified:
  +1 -1		trunk/protocol/ultimate3.c (File Modified) 


nenolod     2005/10/31 03:54:48 UTC	(20051031-3341)
  Log:
  protocol/ultimate3: fix build error -- seems like someone started doing something but forgot to finish
  

  Changes:	Modified:
  +1 -1		trunk/protocol/ultimate3.c (File Modified) 


nenolod     2005/10/31 03:52:12 UTC	(20051031-3339)
  Log:
  protocol/ratbox: fix nested declarations
  

  Changes:	Modified:
  +0 -3		trunk/protocol/ratbox.c (File Modified) 


nenolod     2005/10/31 03:51:25 UTC	(20051031-3337)
  Log:
  protocol/charybdis: fix nested declarations
  

  Changes:	Modified:
  +0 -3		trunk/protocol/charybdis.c (File Modified) 

